force-app/main/default/objects/Title_Order__c/Title_Order__c.object-meta.xml
<CustomObject>
    <label>Title Order</label>
    <nameField>
        <label>Title Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Title Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>