force-app/main/default/objects/Title_Order__c/fields/All_Cleared_To_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Cleared_To_Close_Date__c</fullName>
    <label>All Cleared To Close Date</label>
    <type>Date</type>
</CustomField>