force-app/main/default/objects/Title_Order__c/fields/All_HOA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>All_HOA_Completed_Date__c</fullName>
    <label>All HOA Completed Date</label>
    <type>DateTime</type>
</CustomField>