force-app/main/default/objects/Title_Order__c/fields/All_HOA_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>All_HOA_Ordered_Date__c</fullName>
    <label>All HOA Ordered Date</label>
    <type>Date</type>
</CustomField>