force-app/main/default/objects/Title_Order__c/fields/All_Taxes_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Taxes_Completed_Date__c</fullName>
    <label>All Taxes Completed Date</label>
    <type>Date</type>
</CustomField>