force-app/main/default/objects/Title_Order__c/fields/All_Titles_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Titles_Complete_Date__c</fullName>
    <label>All Titles Complete Date</label>
    <type>Date</type>
</CustomField>