force-app/main/default/objects/Title_Order__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>