force-app/main/default/objects/Title_Order__c/fields/Base64File_Data__c.field-meta.xml
<CustomField>
    <fullName>Base64File_Data__c</fullName>
    <label>Base64File Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>