force-app/main/default/objects/Title_Order__c/fields/Book_Number__c.field-meta.xml
<CustomField>
    <fullName>Book_Number__c</fullName>
    <label>Book Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>