force-app/main/default/objects/Title_Order__c/fields/Borrower_Type__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Type__c</fullName>
    <label>Borrower Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>