force-app/main/default/objects/Title_Order__c/fields/Bulk_Project_Order_Num__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Project_Order_Num__c</fullName>
    <label>Bulk Project Order Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>