force-app/main/default/objects/Title_Order__c/fields/Cancelled_By_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By_First_Name__c</fullName>
    <label>Cancelled By First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>