force-app/main/default/objects/Title_Order__c/fields/Cancelled_By_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By_Last_Name__c</fullName>
    <label>Cancelled By Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>