force-app/main/default/objects/Title_Order__c/fields/Cannot_Cure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Cure_Reasons__c</fullName>
    <label>Cannot Cure Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>