force-app/main/default/objects/Title_Order__c/fields/Client_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_ID__c</fullName>
    <label>Client Contract ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>