force-app/main/default/objects/Title_Order__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Title Orders</relationshipLabel>
    <relationshipName>Title_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>