force-app/main/default/objects/Title_Order__c/fields/Deeds_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Deeds_Ordered_Date__c</fullName>
    <label>Deeds Ordered Date</label>
    <type>Date</type>
</CustomField>