force-app/main/default/objects/Title_Order__c/fields/Destination_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Destination_Party_ID__c</fullName>
    <label>Destination Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>