force-app/main/default/objects/Title_Order__c/fields/Docs_Est_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Est_Arrival_Date__c</fullName>
    <label>Docs Est Arrival Date</label>
    <type>Date</type>
</CustomField>