force-app/main/default/objects/Title_Order__c/fields/Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Document_Received__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Document Received</label>
    <type>Checkbox</type>
</CustomField>