force-app/main/default/objects/Title_Order__c/fields/Document_Submission_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_Confirmation_Date__c</fullName>
    <label>Document Submission Confirmation Date</label>
    <type>DateTime</type>
</CustomField>