force-app/main/default/objects/Title_Order__c/fields/Existing_Debt_Amt__c.field-meta.xml
<CustomField>
    <fullName>Existing_Debt_Amt__c</fullName>
    <label>Existing Debt Amt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>