force-app/main/default/objects/Title_Order__c/fields/File_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Funded_Date__c</fullName>
    <label>File Funded Date</label>
    <type>Date</type>
</CustomField>