force-app/main/default/objects/Title_Order__c/fields/Grantee__c.field-meta.xml
<CustomField>
    <fullName>Grantee__c</fullName>
    <label>Grantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>