force-app/main/default/objects/Title_Order__c/fields/Grantor__c.field-meta.xml
<CustomField>
    <fullName>Grantor__c</fullName>
    <label>Grantor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>