force-app/main/default/objects/Title_Order__c/fields/Has_Order_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Has_Order_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Order Inquiry</label>
    <type>Checkbox</type>
</CustomField>