force-app/main/default/objects/Title_Order__c/fields/HOA_Amount__c.field-meta.xml
<CustomField>
    <fullName>HOA_Amount__c</fullName>
    <label>HOA Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>