force-app/main/default/objects/Title_Order__c/fields/HOA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Completed_Date__c</fullName>
    <label>HOA Completed Date</label>
    <type>Date</type>
</CustomField>