force-app/main/default/objects/Title_Order__c/fields/HOA_Exists__c.field-meta.xml
<CustomField>
    <fullName>HOA_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Exists</label>
    <type>Checkbox</type>
</CustomField>