force-app/main/default/objects/Title_Order__c/fields/HOA_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Ordered_Date__c</fullName>
    <label>HOA Ordered Date</label>
    <type>Date</type>
</CustomField>