force-app/main/default/objects/Title_Order__c/fields/Incoming_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Transaction_Id__c</fullName>
    <label>Incoming Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>