force-app/main/default/objects/Title_Order__c/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>