force-app/main/default/objects/Title_Order__c/fields/Item_Note_Text__c.field-meta.xml
<CustomField>
    <fullName>Item_Note_Text__c</fullName>
    <label>Item Note Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>