force-app/main/default/objects/Title_Order__c/fields/Item_Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_Desc__c</fullName>
    <label>Item Type Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>