force-app/main/default/objects/Title_Order__c/fields/Latest_All_Titles_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_All_Titles_Cleared_Date__c</fullName>
    <label>Latest All Titles Cleared Date</label>
    <type>Date</type>
</CustomField>