force-app/main/default/objects/Title_Order__c/fields/Latest_Title_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Title_Cleared_Date__c</fullName>
    <label>Latest Title Cleared Date</label>
    <type>Date</type>
</CustomField>