force-app/main/default/objects/Title_Order__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>