force-app/main/default/objects/Title_Order__c/fields/Loan_Portfolio_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Portfolio_Confirmation_Date__c</fullName>
    <label>Loan Portfolio Change Confirmation Date</label>
    <type>DateTime</type>
</CustomField>