force-app/main/default/objects/Title_Order__c/fields/Loan_Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Portfolio_Name__c</fullName>
    <label>Loan Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>