force-app/main/default/objects/Title_Order__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>