force-app/main/default/objects/Title_Order__c/fields/Mortgagee__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee__c</fullName>
    <label>Mortgagee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>