force-app/main/default/objects/Title_Order__c/fields/Note_Text__c.field-meta.xml
<CustomField>
    <fullName>Note_Text__c</fullName>
    <label>Note Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>