force-app/main/default/objects/Title_Order__c/fields/Order_Change_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Change_Confirmation_Date__c</fullName>
    <label>Order Change Confirmation Date</label>
    <type>DateTime</type>
</CustomField>