force-app/main/default/objects/Title_Order__c/fields/Order_Inquiry_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Inquiry_Confirmation_Date__c</fullName>
    <label>Order Inquiry Confirmation Date</label>
    <type>DateTime</type>
</CustomField>