force-app/main/default/objects/Title_Order__c/fields/Order_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Opened_Date__c</fullName>
    <label>Order Opened Date</label>
    <type>DateTime</type>
</CustomField>