force-app/main/default/objects/Title_Order__c/fields/Original_All_Titles_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_All_Titles_Cleared_Date__c</fullName>
    <label>Original All Titles Cleared Date</label>
    <type>Date</type>
</CustomField>