force-app/main/default/objects/Title_Order__c/fields/Original_Title_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Title_Cleared_Date__c</fullName>
    <label>Original Title Cleared Date</label>
    <type>Date</type>
</CustomField>