force-app/main/default/objects/Title_Order__c/fields/Payoff_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Completed_Date__c</fullName>
    <label>Payoff Completed Date</label>
    <type>Date</type>
</CustomField>