force-app/main/default/objects/Title_Order__c/fields/Payoff_Exists__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payoff Exists</label>
    <type>Checkbox</type>
</CustomField>