force-app/main/default/objects/Title_Order__c/fields/Payoff_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Ordered_Date__c</fullName>
    <label>Payoff Ordered Date</label>
    <type>Date</type>
</CustomField>