force-app/main/default/objects/Title_Order__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Title Orders</relationshipLabel>
    <relationshipName>Title_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>