force-app/main/default/objects/Title_Order__c/fields/Property_Add_Remove_Re_Act__c.field-meta.xml
<CustomField>
    <fullName>Property_Add_Remove_Re_Act__c</fullName>
    <label>Property Add Remove Re Act</label>
    <length>255</length>
    <type>Text</type>
</CustomField>