force-app/main/default/objects/Title_Order__c/fields/Property_APN__c.field-meta.xml
<CustomField>
    <fullName>Property_APN__c</fullName>
    <label>Property APN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>