force-app/main/default/objects/Title_Order__c/fields/Quote_Accepted_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Accepted_Confirmation_Date__c</fullName>
    <label>Quote Accepted Confirmation Date</label>
    <type>DateTime</type>
</CustomField>