force-app/main/default/objects/Title_Order__c/fields/Rec_Id__c.field-meta.xml
<CustomField>
    <fullName>Rec_Id__c</fullName>
    <label>Rec Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>