force-app/main/default/objects/Title_Order__c/fields/Recording_County__c.field-meta.xml
<CustomField>
    <fullName>Recording_County__c</fullName>
    <label>Recording County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>