force-app/main/default/objects/Title_Order__c/fields/Recording_Desc__c.field-meta.xml
<CustomField>
    <fullName>Recording_Desc__c</fullName>
    <label>Recording Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>