force-app/main/default/objects/Title_Order__c/fields/Recording_State__c.field-meta.xml
<CustomField>
    <fullName>Recording_State__c</fullName>
    <label>Recording State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>