force-app/main/default/objects/Title_Order__c/fields/Recording_Type__c.field-meta.xml
<CustomField>
    <fullName>Recording_Type__c</fullName>
    <label>Recording Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>