force-app/main/default/objects/Title_Order__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>