force-app/main/default/objects/Title_Order__c/fields/Scanned_Docs_Forwarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Docs_Forwarded_Date__c</fullName>
    <label>Scanned Docs Forwarded Date</label>
    <type>Date</type>
</CustomField>