force-app/main/default/objects/Title_Order__c/fields/Signed_Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Docs_Received_Date__c</fullName>
    <label>Signed Docs Received Date</label>
    <type>Date</type>
</CustomField>