force-app/main/default/objects/Title_Order__c/fields/Signing_Location__c.field-meta.xml
<CustomField>
    <fullName>Signing_Location__c</fullName>
    <label>Signing Location</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>