force-app/main/default/objects/Title_Order__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>