force-app/main/default/objects/Title_Order__c/fields/Source_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Party_ID__c</fullName>
    <label>Source Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>