force-app/main/default/objects/Title_Order__c/fields/Special_Assessments_Amt__c.field-meta.xml
<CustomField>
    <fullName>Special_Assessments_Amt__c</fullName>
    <label>Special Assessments Amt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>