force-app/main/default/objects/Title_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote Requested</fullName>
            </value>
            <value>
                <fullName>Quote Received Success</fullName>
            </value>
            <value>
                <fullName>Quote Received Failed</fullName>
            </value>
            <value>
                <fullName>Quote Response Received</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancel Requested</fullName>
            </value>
            <value>
                <fullName>Cancel Request Failed</fullName>
            </value>
            <value>
                <fullName>Quote Accepted</fullName>
            </value>
            <value>
                <fullName>Quote Accepted Confirmed</fullName>
            </value>
            <value>
                <fullName>Quote Accepted Failed</fullName>
            </value>
            <value>
                <fullName>Order Confirmed</fullName>
            </value>
            <value>
                <fullName>Loan Portfolio Change Submitted</fullName>
            </value>
            <value>
                <fullName>Loan Portfolio Change Confirmed</fullName>
            </value>
            <value>
                <fullName>Loan Portfolio Change Failed</fullName>
            </value>
            <value>
                <fullName>All Titles Ordered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>