force-app/main/default/objects/Title_Order__c/fields/Taxes_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Completed_Date__c</fullName>
    <label>Taxes Completed Date</label>
    <type>Date</type>
</CustomField>