force-app/main/default/objects/Title_Order__c/fields/Taxes_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Ordered_Date__c</fullName>
    <label>Taxes Ordered Date</label>
    <type>Date</type>
</CustomField>