force-app/main/default/objects/Title_Order__c/fields/Title_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Complete_Date__c</fullName>
    <label>Title Complete Date</label>
    <type>Date</type>
</CustomField>