force-app/main/default/objects/Title_Order__c/fields/Title_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Title_Vendor__c</fullName>
    <label>Title Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Servicelink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>