force-app/main/default/objects/Title_Order__c/fields/Trust_Date__c.field-meta.xml
<CustomField>
    <fullName>Trust_Date__c</fullName>
    <label>Trust Date</label>
    <type>DateTime</type>
</CustomField>