force-app/main/default/objects/Title_Order__c/fields/Trustee3_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee3_Name__c</fullName>
    <label>Trustee3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>