force-app/main/default/objects/Title_Order__c/fields/Un_Exec_Deed_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Un_Exec_Deed_Sent_Date__c</fullName>
    <label>Un Exec Deed Sent Date</label>
    <type>Date</type>
</CustomField>