force-app/main/default/objects/Title_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_1__c</columns>
    <columns>Address_2__c</columns>
    <columns>All_Cleared_To_Close_Date__c</columns>
    <columns>All_HOA_Completed_Date__c</columns>
    <columns>All_HOA_Ordered_Date__c</columns>
    <columns>Allocated_Loan_Amount__c</columns>
    <columns>All_Payoffs_Completed_Date__c</columns>
    <columns>All_Payoffs_Ordered_Date__c</columns>
    <columns>All_Taxes_Completed_Date__c</columns>
    <columns>All_Taxes_Ordered_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>